@@ -113,9 +113,11 @@ texdiff/texdiff
 texdirflatten/texdirflatten
 texfot/texfot.pl
 texlive/fmtutil.pl
+texlive/fmtutil-sys.sh
 texlive/rungs.tlu
 texlive/tlmgr.pl
 texlive/updmap.pl
+texlive/updmap-sys.sh
 texliveonfly/texliveonfly.py
 texloganalyser/texloganalyser
 thumbpdf/thumbpdf.pl
